[tool.poetry]
name = "acltldr"
version = "0.1.0"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sienna = "^0.2.2"
tqdm = "^4.65.0"
schnitsum = "^0.4.6"
click = "^8.1.3"
requests = "^2.29.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
isort = "^5.12.0"
neovim = "^0.3.1"
pytest = "^7.3.1"
ipython = "^8.13.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
acltldr = "acltldr.main:run"
